; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_sdp.c_bta_hf_client_del_record.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_sdp.c_bta_hf_client_del_record.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@.str = private unnamed_addr constant [25 x i8] c"bta_hf_client_del_record\00", align 1
@bta_hf_client_cb = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@BTM_SEC_SERVICE_HF_HANDSFREE = common dso_local global i32 0, align 4
@UUID_SERVCLASS_HF_HANDSFREE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_hf_client_del_record(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @UNUSED(i32* %3)
  %5 = call i32 @APPL_TRACE_DEBUG(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_hf_client_cb, i32 0, i32 0), align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_hf_client_cb, i32 0, i32 0), align 8
  %10 = call i32 @SDP_DeleteRecord(i64 %9)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_hf_client_cb, i32 0, i32 0), align 8
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_hf_client_cb, i32 0, i32 1), align 8
  %12 = call i32 @BTM_FreeSCN(i32 %11)
  %13 = load i32, i32* @BTM_SEC_SERVICE_HF_HANDSFREE, align 4
  %14 = call i32 @BTM_SecClrService(i32 %13)
  %15 = load i32, i32* @UUID_SERVCLASS_HF_HANDSFREE, align 4
  %16 = call i32 @bta_sys_remove_uuid(i32 %15)
  br label %17

17:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @UNUSED(i32*) #1

declare dso_local i32 @APPL_TRACE_DEBUG(i8*) #1

declare dso_local i32 @SDP_DeleteRecord(i64) #1

declare dso_local i32 @BTM_FreeSCN(i32) #1

declare dso_local i32 @BTM_SecClrService(i32) #1

declare dso_local i32 @bta_sys_remove_uuid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
